libunistdx_src += files([
	'safe_calls.cc'
])

install_headers(
	'addr_parse',
	'basic_istream_iterator',
	'basic_ostream_iterator',
	'byte_swap_chooser',
	'entity',
	'meson.build',
	'octet',
	'poll',
	'safe_calls',
	'safe_calls.cc',
	'sharedmem',
	'socket',
	subdir: meson.project_name() + '/sys/bits'
)
