libunistdx_src += files([
	'file_type.cc',
	'file_mode.cc',
	'file_mutex.cc',
	'file_stat.cc',
	'mkdirs.cc',
	'odirtree.cc',
])

install_headers(
	'canonical_path',
	'directory',
	'direntry',
	'dirstream',
	'file',
	'file_mode',
	'file_mutex',
	'file_stat',
	'file_type',
	'idirectory',
	'idirtree',
	'mkdirs',
	'odirectory',
	'odirtree',
	'path',
	'pathentry',
	subdir: meson.project_name() + '/sys/fs'
)

