libunistdx_src += files([
	'proc_info.cc',
	'proc_status.cc',
	'process.cc',
	'process_group.cc',
	'signal.cc',
])

install_headers(
	'argstream',
	'basic_status',
	'execute',
	'identity',
	'meson.build',
	'proc_info',
	'proc_status',
	'process',
	'process_group',
	'semaphore',
	'sharedmem',
	'shmembuf',
	'signal',
	subdir: meson.project_name() + '/sys/fs'
)

