libunistdx_src += files([
	'endian.cc',
	'endpoint.cc',
	'family.cc',
	'ifaddr.cc',
	'ipv4_addr.cc',
	'ipv6_addr.cc',
	'socket.cc',
])

install_headers(
	'bit_count',
	'byte_order',
	'byte_swap',
	'bytes',
	'endian',
	'endpoint',
	'family',
	'ifaddr',
	'ifaddrs',
	'ifaddrs_iterator',
	'ipaddr_traits',
	'ipv4_addr',
	'ipv6_addr',
	'meson.build',
	'pstream',
	'socket',
	'subnet_iterator',
	subdir: meson.project_name() + '/sys/net'
)


