libunistdx_src += files([
	'backtrace.cc',
	'group.cc',
	'groupstream.cc',
	'system.cc',
	'user.cc',
	'userstream.cc',
])

install_headers(
	'backtrace',
	'cstring_iterator',
	'group',
	'groupstream',
	'intersperse_iterator',
	'meson.build',
	'system',
	'user',
	'userstream',
	subdir: meson.project_name() + '/sys/util'
)
