backtrace_stub = shared_library(
	'backtrace_stub',
	sources: 'backtrace_stub.cc'
)

setgid_stub = shared_library(
	'setgid_stub',
	sources: 'setgid_stub.cc'
)

copy_file_range_stub = shared_library(
	'copy_file_range_stub',
	sources: 'copy_file_range_stub.cc'
)

sendfile_stub = shared_library(
	'sendfile_stub',
	sources: 'sendfile_stub.cc'
)
