libunistdx_src += files([
	'bad_call.cc',
	'base64.cc',
	'byte_buffer.cc',
	'command_line.cc',
	'sha1.cc',
	'websocket.cc',
	'websocketbuf.cc',
])

install_headers(
	'bad_call',
	'base64',
	'byte_buffer',
	'check',
	'command_line',
	'delete_each',
	'flag',
	'ios_guard',
	'log_message',
	'make_object',
	'packetbuf',
	'recursive_spin_mutex',
	'sha1',
	'simple_lock',
	'spin_mutex',
	'streambuf_traits',
	'types',
	'uint128',
	'unlock_guard',
	'websocket',
	'websocketbuf',
	subdir: join_paths(meson.project_name(), 'base')
)
