libunistdx_src += files([
	'safe_calls.cc'
])

install_headers(
	'addr_parse',
	'basic_uint',
	'byte_swap_chooser',
	'entity',
	'make_object',
	'octet',
	'paired_iterator',
	'poll',
	'safe_calls',
	'sharedmem',
	'socket',
	'uint128_hash',
	'uint128_limits',
	'uint128_parse',
	subdir: join_paths(meson.project_name(), 'unistdx', 'bits')
)
