libunistdx_src += files([
	'copy_file.cc',
	'file_mode.cc',
	'file_mutex.cc',
	'file_status.cc',
	'file_type.cc',
	'mkdirs.cc',
	'odirtree.cc',
])

install_headers(
	'canonical_path',
	'copy_file',
	'directory',
	'directory_entry',
	'dirstream',
	'file_mode',
	'file_mutex',
	'file_status',
	'file_type',
	'idirectory',
	'idirtree',
	'mkdirs',
	'odirectory',
	'odirtree',
	'path',
	'path_flag',
	'pathentry',
	subdir: join_paths(meson.project_name(), 'fs')
)

