libunistdx_src += files([
	'epoll_event.cc',
	'fildes.cc',
	'pipe.cc',
	'poll_event.cc',
	'terminal.cc',
	'two_way_pipe.cc',
])

install_headers(
	'epoll_event',
	'fdstream',
	'fildes',
	'fildes_pair',
	'fildesbuf',
	'open_flag',
	'pipe',
	'poll_event',
	'poller',
	'sysstream',
	'two_way_pipe',
	subdir: join_paths(meson.project_name(), 'io')
)


