libunistdx_src += files([
	'identity.cc',
	'process.cc',
	'process_group.cc',
	'process_status.cc',
	'signal.cc',
])

install_headers(
	'argstream',
	'execute',
	'identity',
	'process',
	'process_group',
	'process_semaphore',
	'process_status',
	'semaphore',
	'shared_memory_segment',
	'shmembuf',
	'signal',
	'thread_semaphore',
	subdir: join_paths(meson.project_name(), 'ipc')
)

