libunistdx_src += files([
    'bridge_interface.cc',
    'ethernet_address.cc',
    'family.cc',
    'ipv4_address.cc',
    'ipv6_address.cc',
    'netlink_poller.cc',
    'network_interface.cc',
    'socket_address.cc',
    'socket.cc',
    'veth_interface.cc',
])

install_headers(
    'bit_count',
    'bridge_interface',
    'bstream',
    'byte_order',
    'bytes',
    'byte_swap',
    'ethernet_address',
    'family',
    'interface_address',
    'interface_addresses',
    'interface_address_iterator',
    'ipaddr_traits',
    'ipv4_address',
    'ipv6_address',
    'netlink_socket',
    'network_interface',
    'pstream',
    'socket',
    'socket_address',
    'subnet_iterator',
    'veth_interface',
    subdir: join_paths(meson.project_name(), 'net')
)
