libunistdx_src += files([
    'bridge_interface.cc',
    'ethernet_address.cc',
    'family.cc',
    'ipv4_address.cc',
    'ipv6_address.cc',
    'netlink_poller.cc',
    'network_interface.cc',
    'socket_address.cc',
    'socket.cc',
    'veth_interface.cc',
])

install_headers(
    'bit_count',
    'bridge_interface',
    'bstream',
    'byte_order',
    'bytes',
    'byte_swap',
    'ethernet_address',
    'family',
    'interface_address',
    'interface_addresses',
    'interface_address_iterator',
    'ipaddr_traits',
    'ipv4_address',
    'ipv6_address',
    'netlink_socket',
    'network_interface',
    'pstream',
    'socket',
    'socket_address',
    'subnet_iterator',
    'veth_interface',
    subdir: join_paths(meson.project_name(), 'net')
)

libunistdx_tests += [
    [files('base64_test.cc')],
    [files('bit_count_test.cc')],
    [files('byte_swap_test.cc')],
    [files('bytes_test.cc')],
    [files('ethernet_address_test.cc')],
    [files('family_test.cc')],
    [files('interface_address_test.cc')],
    [files('ipv4_address_test.cc')],
    [files('netlink_poller_test.cc')],
    [files('network_interface_test.cc')],
    [files('socket_test.cc')],
    [files('socket_address_test.cc')],
    [files('veth_interface_test.cc')],
]
